--- a/Peertalk iOS Example/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Peertalk iOS Example/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" colorMatched="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" colorMatched="YES" initialViewController="0vx-6e-JK2">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
@@ -75,5 +75,79 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--Entry Point View Controller-->
+        <scene sceneID="I6z-Sw-Yxe">
+            <objects>
+                <viewController id="0vx-6e-JK2" customClass="EntryPointViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nIH-JP-wiE">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="1st screen - grid.png" id="Fas-89-xJb">
+                                <rect key="frame" x="48.5" y="74.5" width="926.5" height="619"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="360 Driver Experience" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8Yb-tz-UN9">
+                                <rect key="frame" x="102.5" y="265" width="490.5" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="TAP TO GET STARTED" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0dp-P7-dT6">
+                                <rect key="frame" x="102.5" y="330" width="143" height="15.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" red="0.46666666666666667" green="0.46666666666666667" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="1st screen - lit dot.png" id="bv4-iI-DtI">
+                                <rect key="frame" x="695" y="536.5" width="64" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="2nd screen - grid expanded.png" id="kOf-fU-b9y">
+                                <rect key="frame" x="24" y="24.5" width="950" height="719"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="3rd screen - headphones.png" id="Rep-tS-Gqa">
+                                <rect key="frame" x="478" y="250.5" width="67.5" height="67.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Please put on the headphones" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Jxc-SC-o2I">
+                                <rect key="frame" x="339" y="341" width="346" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="4th screen - lit dot.png" id="N6c-6H-vLi">
+                                <rect key="frame" x="659" y="566.5" width="64" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.15686274509803921" green="0.15686274509803921" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="driverExperienceLabel" destination="8Yb-tz-UN9" id="SCn-fH-59b"/>
+                        <outlet property="firstDotImageView" destination="bv4-iI-DtI" id="ohB-P6-qy6"/>
+                        <outlet property="gridImageView" destination="Fas-89-xJb" id="guG-tA-zTP"/>
+                        <outlet property="headphonesImageView" destination="Rep-tS-Gqa" id="UsN-P1-HmK"/>
+                        <outlet property="headphonesLabel" destination="Jxc-SC-o2I" id="VBh-NU-Uya"/>
+                        <outlet property="secondDotImageView" destination="N6c-6H-vLi" id="XoG-Cg-uxH"/>
+                        <outlet property="secondGridImageView" destination="kOf-fU-b9y" id="tVg-Ww-GDg"/>
+                        <outlet property="tapToGetStartedLabel" destination="0dp-P7-dT6" id="eal-P8-tSx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Y9-2D-GXb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
     </scenes>
+    <resources>
+        <image name="1st screen - grid.png" width="1853" height="1238"/>
+        <image name="1st screen - lit dot.png" width="132" height="132"/>
+        <image name="2nd screen - grid expanded.png" width="1867" height="1438"/>
+        <image name="3rd screen - headphones.png" width="136" height="135"/>
+        <image name="4th screen - lit dot.png" width="132" height="132"/>
+    </resources>
 </document>
