--- a/Peertalk iOS Example/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Peertalk iOS Example/en.lproj/MainStoryboard_iPad.storyboard
@@ -83,6 +83,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" id="5wj-09-F1q">
+                                <rect key="frame" x="-1024" y="0.0" width="1024" height="768"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" id="q2T-MN-dmr">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.15686274509803921" green="0.15686274509803921" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="1st screen - grid.png" id="Fas-89-xJb">
                                 <rect key="frame" x="48.5" y="74.5" width="926.5" height="619"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -109,33 +119,89 @@
                                 <rect key="frame" x="36" y="24.5" width="950" height="719"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="3rd screen - headphones.png" id="Rep-tS-Gqa">
+                            <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="3rd screen - headphones.png" id="Rep-tS-Gqa">
                                 <rect key="frame" x="478" y="250.5" width="67.5" height="67.5"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Please put on the headphones" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Jxc-SC-o2I">
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Please put on the headphones" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Jxc-SC-o2I">
                                 <rect key="frame" x="339" y="341" width="346" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="20"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.46666666666666667" green="0.46666666666666667" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="4th screen - lit dot.png" id="N6c-6H-vLi">
                                 <rect key="frame" x="659" y="566.5" width="64" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="4th screen - grid controller.png" id="EDK-3q-pEj">
+                                <rect key="frame" x="402" y="422" width="576" height="353"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="5th screen - hand.png" id="gA0-kt-JRk">
+                                <rect key="frame" x="640" y="515.5" width="71" height="67.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Hold and drag to rotate the video" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nSU-jJ-3lV">
+                                <rect key="frame" x="572.5" y="594" width="227" height="59"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.46666666670000001" green="0.46666666670000001" blue="0.46666666670000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="6th screen - grid.png" id="ifl-I0-Ade">
+                                <rect key="frame" x="20" y="24" width="982" height="722"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Make up to $1,000/week working with us" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8o8-Cc-YzU">
+                                <rect key="frame" x="112.5" y="170" width="583" height="134"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" id="F6o-Tr-SEs">
+                                <rect key="frame" x="657" y="293" width="182" height="182"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sign up in under 2 minutes" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lQQ-Ew-7di">
+                                <rect key="frame" x="679.5" y="315" width="130.5" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.15686274509803921" green="0.15686274509803921" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sign Up" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="b9X-aJ-9TK">
+                                <rect key="frame" x="719" y="432" width="62.5" height="20.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.15686274510000001" green="0.15686274510000001" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.15686274509803921" green="0.15686274509803921" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="driverExperienceLabel" destination="8Yb-tz-UN9" id="SCn-fH-59b"/>
+                        <outlet property="fifthHandImageView" destination="gA0-kt-JRk" id="a0V-Lf-imI"/>
+                        <outlet property="firstBackgroundImageView" destination="q2T-MN-dmr" id="kNq-Kc-xSK"/>
                         <outlet property="firstDotImageView" destination="bv4-iI-DtI" id="ohB-P6-qy6"/>
+                        <outlet property="fourthGridControllerImageView" destination="EDK-3q-pEj" id="LkT-I8-veW"/>
                         <outlet property="gridImageView" destination="Fas-89-xJb" id="guG-tA-zTP"/>
                         <outlet property="headphonesImageView" destination="Rep-tS-Gqa" id="UsN-P1-HmK"/>
                         <outlet property="headphonesLabel" destination="Jxc-SC-o2I" id="VBh-NU-Uya"/>
+                        <outlet property="holdAndDragLabel" destination="nSU-jJ-3lV" id="5Gj-a7-CM7"/>
+                        <outlet property="secondBackgroundImageView" destination="5wj-09-F1q" id="Tyr-qT-mu4"/>
                         <outlet property="secondDotImageView" destination="N6c-6H-vLi" id="XoG-Cg-uxH"/>
                         <outlet property="secondGridImageView" destination="kOf-fU-b9y" id="tVg-Ww-GDg"/>
+                        <outlet property="signupArrowLabel" destination="b9X-aJ-9TK" id="4pB-Le-oNs"/>
+                        <outlet property="signupBackgroundImageView" destination="F6o-Tr-SEs" id="Kpq-Hy-tkp"/>
+                        <outlet property="signupInUnderLabel" destination="lQQ-Ew-7di" id="tcw-Se-bLu"/>
+                        <outlet property="sixthScreenGrid" destination="ifl-I0-Ade" id="73x-Ut-vpp"/>
+                        <outlet property="sixthScreenLabel" destination="8o8-Cc-YzU" id="qYw-vu-T9u"/>
                         <outlet property="tapToGetStartedLabel" destination="0dp-P7-dT6" id="eal-P8-tSx"/>
                     </connections>
                 </viewController>
@@ -148,6 +214,9 @@
         <image name="1st screen - lit dot.png" width="132" height="132"/>
         <image name="2nd screen - grid expanded.png" width="1867" height="1438"/>
         <image name="3rd screen - headphones.png" width="136" height="135"/>
+        <image name="4th screen - grid controller.png" width="1152" height="580"/>
         <image name="4th screen - lit dot.png" width="132" height="132"/>
+        <image name="5th screen - hand.png" width="135" height="136"/>
+        <image name="6th screen - grid.png" width="1867" height="1438"/>
     </resources>
 </document>
